--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="/Users/adamdepollo/Desktop/HTML_CSS_CODE/Lab21/website_style.css">
+  <link rel="stylesheet" href="website_style.css">
   <title>Adam DePollo | Java Developer, Writer, Musician</title>
 </head>
 
@@ -21,16 +21,16 @@
 <div class="collapse navbar-collapse" id="navbarNavDropdown">
   <ul class="navbar-nav">
     <li class="nav-item active">
-      <a class="nav-link" href="/Users/adamdepollo/Desktop/HTML_CSS_CODE/Lab21/landing_page.html">home<span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="index.html">home<span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/Users/adamdepollo/Desktop/HTML_CSS_CODE/Lab21/about.html">about</a>
+      <a class="nav-link" href="about.html">about</a>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">work</a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <a class="dropdown-item" href="#">code</a>
-        <a class="dropdown-item" href="/Users/adamdepollo/Desktop/HTML_CSS_CODE/Lab21/writing.html">writing</a>
+        <a class="dropdown-item" href="writing.html">writing</a>
         <a class="dropdown-item" href="#">music</a>
       </div>
     </li>
