--- a/index.html
+++ b/index.html
@@ -52,14 +52,11 @@
           opportunities.</p>
 
         <p class="firstPageP">I'm always looking for something new to work on. Click the button at the bottom of this page — let's talk about what I can bring to your next project.</p>
-        <button type="button" class="btn btn-outline-dark" id="bottomButton"><a href="/Users/adamdepollo/Desktop/HTML_CSS_CODE/html_test/html_test_about.html" class="aboutLink">Wow, I need to know more about this great website as
-              soon as
-              possible.</a></button>
       </div>
 
       <div class="col-md-4">
         <div class="m-3"></div>
-        <img src="/Users/adamdepollo/Desktop/HTML_CSS_CODE/Lab21/IMG_3567.jpeg" class="img-fluid" alt="Responsive image">
+        <img src="IMG_3567.jpeg" class="img-fluid" alt="Responsive image">
       </div>
     </div>
     </div>
