--- a/writing.html
+++ b/writing.html
@@ -24,7 +24,7 @@
       <a class="nav-link" href="index.html">writing<span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">home</a>
+      <a class="nav-link" href="index.html">home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="about.html">about</a>
@@ -39,7 +39,8 @@
   </ul>
 </div>
 </nav>
-
+<div class="m-3"></div>
+<div class="m-3"></div>
   <div class="m-3"></div>
 <div class="container">
 <ul class="list-unstyled">
