--- a/writing.html
+++ b/writing.html
@@ -39,9 +39,7 @@
   </ul>
 </div>
 </nav>
-<div class="m-3"></div>
-<div class="m-3"></div>
-  <div class="m-3"></div>
+<div class="godown-60" id="godown"></div>
 <div class="container">
 <ul class="list-unstyled">
 <li class="media">
