--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       </ul>
     </div>
   </nav>
-<div class="godown-60" id="godown"></div>
+  <div class="godown-60" id="godown"></div>
   <div class="container">
     <div class="m-3"></div>
     <div class="row">
@@ -49,9 +49,12 @@
         <div class="m-3"></div>
 
         <p class="lead firstPageP">I’m a back-end software developer with a background in writing, editing, and music.</p>
-        <p class="firstPageP">In my previous work writing in corporate, news, and small business settings, I learned first-hand that even small improvements in website design can make a huge difference in productivity and user experience. That’s why I decided to study Java at Grand Circus — I wanted to combine my communication skills with the ability to design software to make communication easier and more effective. I’m looking forward to finding a role at the intersection of tech and the humanities where I can make the most of the skills at my disposal.</p>
+        <p class="firstPageP">In my previous work writing in corporate, news, and small business settings, I learned first-hand that even small improvements in website design can make a huge difference in productivity and user experience. That’s why
+          I decided to study Java at Grand Circus — I wanted to combine my communication skills with the ability to design software to make communication easier and more effective. I’m looking forward to finding a role at the intersection of tech and
+          the humanities where I can make the most of the skills at my disposal.</p>
         <p class="firstPageP">Outside of business hours, I keep busy as a freelance arts writer — currently with the Michigan Quarterly Review — and as a producer and multi-instrumentalist playing with several artists in the Detroit area. </p>
-        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="adamdepollo"><a class="LI-simple-link" href='https://www.linkedin.com/in/adamdepollo?trk=profile-badge'>Adam DePollo</a></div>
+        <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="adamdepollo"><a class="LI-simple-link"
+            href='https://www.linkedin.com/in/adamdepollo?trk=profile-badge'>Adam DePollo</a></div>
       </div>
       <div class="col-md-4">
         <div class="m-3"></div>
@@ -59,11 +62,12 @@
       </div>
     </div>
     <div class="row">
+      <div col="lg-12">
 
 
-      <row>
-        <!--Section: Contact v.2-->
-        <section class="mb-4">
+        <row>
+          <!--Section: Contact v.2-->
+          <section class="mb-4">
 
             <!--Section heading-->
             <h2 class="h1-responsive font-weight-bold text-center my-4">get in touch</h2>
@@ -72,98 +76,99 @@
 
             <div class="row">
 
-                <!--Grid column-->
-                <div class="col-md-9 mb-md-0 mb-5">
-                    <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+              <!--Grid column-->
+              <div class="col-md-9 mb-md-0 mb-5">
+                <form id="contact-form" name="contact-form" action="mail.php" method="POST">
 
-                        <!--Grid row-->
-                        <div class="row">
+                  <!--Grid row-->
+                  <div class="row">
 
-                            <!--Grid column-->
-                            <div class="col-md-6">
-                                <div class="md-form mb-0">
-                                    <input type="text" id="name" name="name" class="form-control">
-                                    <label for="name" class="">your name</label>
-                                </div>
-                            </div>
-                            <!--Grid column-->
-
-                            <!--Grid column-->
-                            <div class="col-md-6">
-                                <div class="md-form mb-0">
-                                    <input type="text" id="email" name="email" class="form-control">
-                                    <label for="email" class="">your email</label>
-                                </div>
-                            </div>
-                            <!--Grid column-->
-
-                        </div>
-                        <!--Grid row-->
-
-                        <!--Grid row-->
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="md-form mb-0">
-                                    <input type="text" id="subject" name="subject" class="form-control">
-                                    <label for="subject" class="">subject</label>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Grid row-->
-
-                        <!--Grid row-->
-                        <div class="row">
-
-                            <!--Grid column-->
-                            <div class="col-md-12">
-
-                                <div class="md-form">
-                                    <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                                    <label for="message">your message</label>
-                                </div>
-
-                            </div>
-                        </div>
-                        <!--Grid row-->
-
-                    </form>
-
-                    <div class="text-center text-md-left">
-                        <a class="btn btn-outline-dark" id="bottomButton" onclick="document.getElementById('contact-form').submit();">send</a>
+                    <!--Grid column-->
+                    <div class="col-md-6">
+                      <div class="md-form mb-0">
+                        <input type="text" id="name" name="name" class="form-control">
+                        <label for="name" class="">your name</label>
+                      </div>
                     </div>
-                    <div class="status"></div>
-                </div>
-                <!--Grid column-->
+                    <!--Grid column-->
 
-                <!--Grid column-->
-                <div class="col-md-3 text-center">
-                    <ul class="list-unstyled mb-0">
-                        <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                            <p>Metro Detroit, MI USA</p>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.293669595341!2d-83.05252879973588!3d42.33626187908639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883b2d33d89a51e1%3A0xa9790542da332066!2sGrand%20Circus%20Detroit!5e0!3m2!1sen!2sus!4v1573186947780!5m2!1sen!2sus" max-width="100%" max-height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-                        </li>
+                    <!--Grid column-->
+                    <div class="col-md-6">
+                      <div class="md-form mb-0">
+                        <input type="text" id="email" name="email" class="form-control">
+                        <label for="email" class="">your email</label>
+                      </div>
+                    </div>
+                    <!--Grid column-->
 
-                        <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                            <p>adamdepollo@gmail.com</p>
-                        </li>
-                    </ul>
+                  </div>
+                  <!--Grid row-->
+
+                  <!--Grid row-->
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="md-form mb-0">
+                        <input type="text" id="subject" name="subject" class="form-control">
+                        <label for="subject" class="">subject</label>
+                      </div>
+                    </div>
+                  </div>
+                  <!--Grid row-->
+
+                  <!--Grid row-->
+                  <div class="row">
+
+                    <!--Grid column-->
+                    <div class="col-md-12">
+
+                      <div class="md-form">
+                        <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                        <label for="message">your message</label>
+                      </div>
+
+                    </div>
+                  </div>
+                  <!--Grid row-->
+
+                </form>
+
+                <div class="text-center text-md-left">
+                  <a class="btn btn-outline-dark" id="bottomButton" onclick="document.getElementById('contact-form').submit();">send</a>
                 </div>
-                <!--Grid column-->
+                <div class="status"></div>
+              </div>
+              <!--Grid column-->
+
+              <!--Grid column-->
+              <div class="col-md-3 text-center">
+                <ul class="list-unstyled mb-0">
+                  <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                    <p>Metro Detroit, MI USA</p>
+                    <iframe
+                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.293669595341!2d-83.05252879973588!3d42.33626187908639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883b2d33d89a51e1%3A0xa9790542da332066!2sGrand%20Circus%20Detroit!5e0!3m2!1sen!2sus!4v1573186947780!5m2!1sen!2sus"
+                      max-width="100%" max-height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                  </li>
+
+                  <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                    <p>adamdepollo@gmail.com</p>
+                  </li>
+                </ul>
+              </div>
+              <!--Grid column-->
 
             </div>
 
-        </section>
-        <!--Section: Contact v.2-->
+          </section>
+          <!--Section: Contact v.2-->
         </row>
+      </div>
     </div>
-  </div>
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAguxHIAXzZXks7OZEjpVNEzA3mJOLz7o&callback=initMap"
-  type="text/javascript"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAguxHIAXzZXks7OZEjpVNEzA3mJOLz7o&callback=initMap" type="text/javascript"></script>
 
 </body>
 
