added linkedin and github badges to about

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="website_style.css">
-  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" data-format="inline" data-width="600" async defer></script>
   <title>Adam DePollo | Java Developer, Writer, Musician</title>
 </head>
 
@@ -53,8 +53,11 @@
           I decided to study Java at Grand Circus — I wanted to combine my communication skills with the ability to design software to make communication easier and more effective. I’m looking forward to finding a role at the intersection of tech and
           the humanities where I can make the most of the skills at my disposal.</p>
         <p class="firstPageP">Outside of business hours, I keep busy as a freelance arts writer — currently with the Michigan Quarterly Review — and as a producer and multi-instrumentalist playing with several artists in the Detroit area. </p>
+        <a href="https://www.linkedin.com/adamdepollo" class="badge badge-primary" id ="linkedin">LinkedIn</a>
+        <a href="https://github.com/adamdepollo" class="badge badge-secondary">GitHub</a>
+<!--
         <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="adamdepollo"><a class="LI-simple-link"
-            href='https://www.linkedin.com/in/adamdepollo?trk=profile-badge'>Adam DePollo</a></div>
+            href='https://www.linkedin.com/in/adamdepollo?trk=profile-badge'>Adam DePollo</a></div> -->
       </div>
       <div class="col-md-4">
         <div class="m-3"></div>
