added a bunch of stuff

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand navy" href="#">adam depollo</a>
+    <a class="navbar-brand navy" href="index.html">adam depollo</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -30,9 +30,9 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">work</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">code</a>
+            <a class="dropdown-item" href="code.html">code</a>
             <a class="dropdown-item" href="writing.html">writing</a>
-            <a class="dropdown-item" href="#">music</a>
+            <a class="dropdown-item" href="music.html">music</a>
           </div>
         </li>
       </ul>
