added more stuff

--- a/code.html
+++ b/code.html
@@ -41,6 +41,7 @@
 </nav>
 <div class="godown-60" id="godown"></div>
   <div class="container">
+    <div class="m-3"></div>
     <div class="row">
       <div class="col-lg-12">
 <h3 class="firstPageHeader">code</h3>
@@ -76,16 +77,16 @@
     <div class="row">
       <div class="col-lg-12">
 
-        <p class="firstPageP">Here are some of the programs I've made:</p>
+        <p class="firstPageP">You'll find info on some of the programs I've made below, but you can find even more of my work on <a href="https://github.com/adamdepollo">my GitHub page</a>.</p>
 </div>
         </div>
         <div class="row">
           <div class="col-lg-6">
         <ul class="list-unstyled">
           <li class="media">
-            <div class="media-body workHeader">
-              <h5 class="mt-0 mb-1 workHeader">Minefield</h5>
-              This Minesweeper port was a lot of fun to make. Working with a partner, I first made a version of the game that used a .txt file to store and display the minefield and took user input for which square to uncover using a basic Java compiler console. Once we had the basic logic down, I spent the weekend researching JSwing and created the GUI you can see in the accompanying gif. I even added a soundtrack of music I recorded at my home studio and a pretty realistic explosion sound for when the player loses.
+            <div class="media-body firstPageP">
+              <h3 class="mt-0 mb-1 firstPageHeader">minefield</h3>
+              This Minesweeper port was a lot of fun to make. Working with a partner, I first made a version of the game that used a .txt file to store and display the minefield and took user input for which square to uncover using a basic Java compiler console. Once we had the basic logic down, I spent the weekend researching JSwing and created the GUI you can see in the accompanying gif. It includes a soundtrack of music I recorded at my home studio and a pretty realistic explosion sound for when the player loses.
             </div>
                 </li>
                 </div>
