--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <img src="IMG_3567.jpeg" class="img-fluid" alt="Responsive image">
       </div>
     </div>
+    <div class="m-3"></div>
     </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
