--- a/writing.html
+++ b/writing.html
@@ -53,16 +53,16 @@
       <hr />
     </div>
     <div class="row">
-      <div class="col-md-4 d-flex justify-content-center">
-        <h4>interviews
+      <div class="col-sm-2 d-flex justify-content-left">
+        <h3 class="firstPageHeader">interviews
           <hr />
-        </h4>
+        </h3>
       </div>
-      <div class="col-lg-8">
+      <div class="col-lg-10">
         <ul class="list-unstyled">
           <li class="media">
             <div class="media-body workHeader">
-              <h5 class="mt-0 mb-1 workHeader">Latin American Storytelling in the Trump Era: An Interview with Daniel Alarcón</h5>
+              <h4 class="mt-0 mb-1 workHeader">Latin American Storytelling in the Trump Era: An Interview with Daniel Alarcón</h4>
               Daniel Alarcón is a Peru-born, US-raised journalist and novelist whose work includes executive producing NPR's <em>Radio Ambulante</em>, <em>Lost City Radio</em>, a novel, and, most recently, the story
               collection <em>The King is Always Above the People</em>.
             </div>
@@ -74,7 +74,7 @@
           </li>
           <li class="media my-4">
             <div class="media-body workHeader">
-              <h5 class="mt-0 mb-1 workHeader">Recipe For Success: An Interview with McClure's Pickles Founder Joe McClure</h5>
+              <h4 class="mt-0 mb-1 workHeader">Recipe For Success: An Interview with McClure's Pickles Founder Joe McClure</h4>
               Listening to Joe McClure talk about pickles is a rare treat. It’s a bit like hearing a toddler tell you about their favorite toy; that comparison is particularly apt here, since McClure — who co-founded
               McClure’s Pickles with his brother Bob in 2006 — has been in the pickle business since he was a young boy.
             </div>
@@ -86,7 +86,7 @@
           </li>
           <li class="media my-4">
             <div class="media-body workHeader">
-              <h5 class="mt-0 mb-1 workHeader">Tarfia Faizullah: The Illumination of Poetry</h5>
+              <h4 class="mt-0 mb-1 workHeader">Tarfia Faizullah: The Illumination of Poetry</h4>
               When Tarfia Faizullah fell in love with poetry, she wasn’t enamored with the fictive beauty of metaphors or the craftsmanship that goes into forming perfectly metered verse. Rather, she was entranced by its ability to illuminate the
               world around us on its own terms — in her case, literally so.
             </div>
@@ -98,7 +98,7 @@
           </li>
           <li class="media my-4">
             <div class="media-body workHeader">
-              <h5 class="mt-0 mb-1 workHeader">Introducing Kevin Garrett</h5>
+              <h4 class="mt-0 mb-1 workHeader">Introducing Kevin Garrett</h4>
               An early interview with Kevin Garrett, a singer-songwriter and composer who soon went on to earn a Grammy nomination for his controbutions to “Pray You Catch Me” from Beyoncé’s album <em>Lemonade</em>.
             </div>
             <div class="websiteThumb">
@@ -111,16 +111,16 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4 d-flex justify-content-center">
-        <h4>features & reportage
+      <div class="col-sm-2 d-flex justify-content-left">
+        <h3 class="firstPageHeader">features & reportage
           <hr />
-        </h4>
+        </h3>
       </div>
-      <div class="col-lg-8">
+      <div class="col-lg-10">
         <ul class="list-unstyled">
           <li class="media">
             <div class="media-body workHeader">
-              <h5 class="mt-0 mb-1 workHeader">Keeping Up with the Campus Consumer</h5>
+              <h4 class="mt-0 mb-1 workHeader">Keeping Up with the Campus Consumer</h4>
               A long-form feature on consumer trends among University of Michigan students and how they intertwine with a rapidly gentrifying downtown Ann Arbor.
             </div>
             <div class="websiteThumb">
@@ -131,7 +131,7 @@
           </li>
           <li class="media my-4">
             <div class="media-body workHeader">
-              <h5 class="mt-0 mb-1 workHeader">Play On: Changing Gamer Culture at the University of Michigan</h5>
+              <h4 class="mt-0 mb-1 workHeader">Play On: Changing Gamer Culture at the University of Michigan</h4>
               A pre-Gamer Gate look at the University of Michigan Video Game Archive's efforts to diversify the video game industry for the future. while faithfully documenting its history.
             </div>
             <div class="websiteThumb" id="gameon">
@@ -142,7 +142,7 @@
           </li>
           <li class="media my-4">
             <div class="media-body workHeader">
-              <h5 class="mt-0 mb-1 workHeader">Cultural Cannibalism: Detroit's New Underground Music</h5>
+              <h4 class="mt-0 mb-1 workHeader">Cultural Cannibalism: Detroit's New Underground Music</h4>
               Published near the end of 2015, this piece reports on the way Detroit's music scene was changing in response to a resurgence of investment and capital in Midtown.
             </div>
             <div class="websiteThumb">
