--- a/writing.html
+++ b/writing.html
@@ -41,12 +41,13 @@
   </nav>
   <div class="godown-60" id="godown"></div>
   <div class="container">
+    <div class="m-3"></div>
     <div class="row">
       <div class="col-lg-12">
         <h3 class="firstPageHeader">writing</h3>
         <p class="firstPageP">
           I've been writing professionally since 2012, when I got my first gig covering concerts and writing about jazz for the Michigan Daily in Ann Arbor, MI. Since then, I've been published internationally in media ranging from newspapers, fine
-          arts journals, and magazines to whitepapers, policy documents, and PR releases.
+          arts journals, and magazines to whitepapers, policy documents, and PR releases. Here are a few pieces that I really enjoyed putting together:
           <hr />
         </p>
       </div>
