--- a/writing.html
+++ b/writing.html
@@ -133,7 +133,7 @@
           <li class="media my-4">
             <div class="media-body workHeader">
               <h4 class="mt-0 mb-1 workHeader">Play On: Changing Gamer Culture at the University of Michigan</h4>
-              A pre-Gamer Gate look at the University of Michigan Video Game Archive's efforts to diversify the video game industry for the future. while faithfully documenting its history.
+              A pre-"Gamer Gate" look at the University of Michigan Video Game Archive's efforts to diversify the video game industry for the future while faithfully documenting its history.
             </div>
             <div class="websiteThumb" id="gameon">
               <a href="https://www.michigandaily.com/arts/10computer-video-game-archive22" class="thumbnail">
@@ -155,6 +155,29 @@
       </div>
     </div>
     </ul>
+    <!-- start fiction -->
+    <div class="row">
+      <div class="col-sm-2 d-flex justify-content-left">
+        <h3 class="firstPageHeader">fiction
+          <hr />
+        </h3>
+      </div>
+      <div class="col-lg-10">
+        <ul class="list-unstyled">
+          <li class="media">
+            <div class="media-body workHeader">
+              <h4 class="mt-0 mb-1 workHeader">
+                Little Shit
+              </h4>It was fifty degrees in Orlando today, so every smart person stayed inside. Bob sat in his room watching a newsman stand in the snow. I sat in the hotel lobby watching a middle-aged man watching a newsman stand in the snow. I’m not sure if either of us enjoyed ourselves, but my sentence was longer . . .
+            </div>
+            <div class="websiteThumb">
+              <a href="https://www.michigandaily.com/section/statement/little-sht" class="thumbnail">
+              </a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div> <!-- end fiction -->
   </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
