--- a/music.html
+++ b/music.html
@@ -42,6 +42,13 @@
 
 <div class="godown-60" id="godown"></div>
 <div class="container">
+  <div class="m-3"></div>
+  <div class="row">
+    <div class="col-lg-12">
+<h3 class="firstPageHeader">music</h3>
+      <p class="firstPageP">I've been a musician almost my entire life, and I still try to get as many opportunities to play and write as I can. I started studying piano and violin when I was about 8 years old, but I got my first guitar when I was 12 and fell in love with it right away. Since then, the guitar has been my primary instrument (with an honorable mention to the electric bass). My go-tos these days are a 1999 MIM Fender Stratocaster and a 1996 Taylor 410. <br/><br/>In the last few years, I've had the chance to work with a bunch of incredible artists and perform at venues around the Detroit area. Songs I've helped produce have been written up in the <em>Detroit Metro Times</em>, played on WDET's "Culture Shift", performed to a sold-out crowd at St. Andrew's Hall in Detroit, and even appeared in an episode of the CW's "Batwoman." Here are a few of the recent performances and projects I've been particularly happy with:</p>
+</div>
+      </div>
   <div class="row">
     <div class="col-md-6">
       <div class="m-3"></div>
