--- a/code.html
+++ b/code.html
@@ -51,24 +51,24 @@
 <div class="row">
   <div class="col-lg-12">
   <ul class="list-group list-group-flush">
-    <table class="table table-sm firstPageP">
+    <table class="table table-sm firstPageP" id="codetable">
     <tbody>
       <thead>
       <tr>
-        <td>Java</td>
-        <td>Spring MVC</td>
-        <td>SQL</td>
+        <td width="33%">Java</td>
+        <td width="33%">Spring MVC</td>
+        <td width="33%">SQL</td>
       </tr>
       </thead>
       <tr>
-        <td>Git/GitHub</td>
-        <td>Hibernate</td>
-        <td>HTML/CSS</td>
+        <td width="33%">Git/GitHub</td>
+        <td width="33%">Hibernate</td>
+        <td width="33%">HTML/CSS</td>
       </tr>
       <tr>
-        <td>OOP</td>
-        <td>Web APIs</td>
-        <td>Adobe Illustrator / InDesign</td>
+        <td width="33%">OOP</td>
+        <td width="33%">Web APIs</td>
+        <td width="33%">Adobe Illustrator / InDesign</td>
       </tr>
     </tbody>
   </table>
